--- a/style.css
+++ b/style.css
@@ -43,11 +43,11 @@ header {
 }
 
 #qaButton {
+	cursor: pointer;
 	margin: 15px auto;
 	display: block;
 	border: 0px;
 	box-shadow:inset 0px -2px 0px 0px #327794;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #2aaae1), color-stop(1, #2aaae1) );
 	background-color:#2aaae1;
 	border-radius:6px;
 	color:#ffffff;
@@ -56,7 +56,8 @@ header {
 	font-weight:normal;
 	padding:10px 40px;
 	text-decoration:none;
-}.#qaButton:active {
+}#qaButton:active {
+	background-color:#1a8aca;
 	position:relative;
 	top:1px;
 }
