--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header {
 	font-size: 18pt;
 	margin-right: 10px;
 	text-align: center;
+	line-height: 20pt;
 }
 
 .qaSection {
@@ -26,8 +27,10 @@ header {
 
 .qaTextBox {
 	width: 250px;
-	height: 20px;
+	/*height: 10px;*/
 	font-size: 13pt;
+	border: 1px solid #ccc;
+	padding: 5px;
 }::-webkit-input-placeholder {
 	color: #eee;
 	font-weight: 200;
@@ -60,4 +63,40 @@ header {
 	background-color:#1a8aca;
 	position:relative;
 	top:1px;
+}
+
+.qaitem {
+	display: block;
+	width: 310px;
+	margin: 5px auto;
+}
+
+.qaBtnContainer {
+	display: inline-block;
+	width: 25px;
+	font-size: 18pt;
+	margin-right: 10px;
+	text-align: center;
+	vertical-align: top;
+	margin-top: 12px;
+}
+
+.qaBtnContainer > a {
+	display: inline-block;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.qaContentContainer {
+	width: 250px;
+	display: inline-block;
+}
+
+.qaTitleQuestion {
+	padding: 3px;
+}
+
+.qaTitleAnswer {
+	font-weight: bold;
+	padding: 3px;
 }
